GitHub action debug

--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -25,29 +25,23 @@ jobs:
         ]
     
     steps:
-    - name: Setup dependencies
-      run: /bin/sh -c "apt-get update &&\
-                       apt-get dist-upgrade -y &&\
-                       apt-get install -y git ninja cmake python3 pip3 &&\
-                       pip3 install meson"
+    - name: Update System Repos
+      run: /bin/sh -c "sudo apt-get update"
+
+    - name: Setup Dependencies
+      run: /bin/sh -c "sudo apt-get install ninja-build meson -y"
 
     - name: Checkout Action
       uses: actions/checkout@v1
 
     - name: Configure
-      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/.. &&\
-                       mkdir ncio-build &&\
-                       cd ncio-build &&\
-                       meson --prefix=${GITHUB_WORKSPACE}/../ncio-install .."
+      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/.. && mkdir ncio-build && cd ncio-build && meson --prefix=${GITHUB_WORKSPACE}/../ncio-install .."
 
     - name: Build
-      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/../ncio-build &&\
-                       ninja"
+      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/../ncio-build && ninja"
 
     - name: Test
-      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/../ncio-build &&\
-                       ninja test"
+      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/../ncio-build && ninja test"
 
     - name: Install
-      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/../ncio-build &&\
-                       ninja install"
+      run: /bin/sh -c "cd ${GITHUB_WORKSPACE}/../ncio-build && ninja install"
