--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -14,21 +14,31 @@ jobs:
     runs-on: ubuntu-latest
     container: ${{ matrix.container }}
     env:
-      GH_YML_JOBNAME: ${{ matrix.jobname }}
-      GH_YML_OS: Linux
+      GH_JOBNAME: ${{ matrix.jobname }}
+      GH_OS: Linux
     strategy:
       fail-fast: false
       matrix:
         jobname: [
-          ubuntu18-gcc7
+          ubuntu18-gcc7,
+          centos7-gcc7
         ]
+        include:
+        - jobname: ubuntu18-gcc7
+          container: 
+            image: devcafe/ubuntu18.04-gcc7.3.0-openmpi2.1.0
+            options: -u root
+        - jobname: centos7-gcc7
+          container: 
+            image: centos/devtoolset-7-toolchain-centos7:7
+            options: -u root
 
     steps:
     - name: Checkout Action
       uses: actions/checkout@v1
       
     - name: Setup Dependencies
-      run: scripts/ci/github-actions/bash/setup_debian.sh
+      run: scripts/ci/github-actions/bash/setup_linux.sh
 
     - name: Configure
       run: scripts/ci/github-actions/bash/run_step.sh configure
@@ -43,34 +53,34 @@ jobs:
       run: scripts/ci/github-actions/bash/run_step.sh install
 
 
-#   macos:
-#     runs-on: macos-latest
-#     env:
-#       GH_YML_JOBNAME: ${{ matrix.jobname }}
-#       GH_YML_OS: macOS
-# 
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         jobname: [
-#           macos1015-xcode11 
-#         ]
-# 
-#     steps:
-#     - name: Checkout Action
-#       uses: actions/checkout@v1
-# 
-#     - name: Setup Dependencies
-#       run: scripts/ci/github-actions/bash/setup_macos.sh
-# 
-#     - name: Configure
-#       run: scripts/ci/github-actions/bash/run_step.sh configure
-# 
-#     - name: Build
-#       run: scripts/ci/github-actions/bash/run_step.sh build
-# 
-#     - name: Test
-#       run: scripts/ci/github-actions/bash/run_step.sh test
-# 
-#     - name: Install
-#       run: scripts/ci/github-actions/bash/run_step.sh install
+  macos:
+    runs-on: macos-latest
+    env:
+      GH_YML_JOBNAME: ${{ matrix.jobname }}
+      GH_YML_OS: macOS
+
+    strategy:
+      fail-fast: false
+      matrix:
+        jobname: [
+          macos1015-xcode11 
+        ]
+
+    steps:
+    - name: Checkout Action
+      uses: actions/checkout@v1
+
+    - name: Setup Dependencies
+      run: scripts/ci/github-actions/bash/setup_macos.sh
+
+    - name: Configure
+      run: scripts/ci/github-actions/bash/run_step.sh configure
+
+    - name: Build
+      run: scripts/ci/github-actions/bash/run_step.sh build
+
+    - name: Test
+      run: scripts/ci/github-actions/bash/run_step.sh test
+
+    - name: Install
+      run: scripts/ci/github-actions/bash/run_step.sh install
