--- a/testing/functional/bindings/CXX17/meson.build
+++ b/testing/functional/bindings/CXX17/meson.build
@@ -7,7 +7,7 @@ functional_tests = ['cxx17Common.cpp',
 
 foreach functional_test : functional_tests
   exe = executable('functionaltest-ncio-'+functional_test, 
-                   'test_' + functional_test,
+                   'functionalTest_' + functional_test,
                    include_directories:  ncio_doctest_inc, 
                    dependencies: [ncio_cxx17_dep, doctest_dep])
   test(functional_test, exe, timeout: 10)
