Generate ncioConfig.h public header

--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,7 @@
 # Define project information
 project('ncio',
         ['cpp'],
-        license: 'BSD 3-Clause',
+        license: ['BSD 3-Clause'],
         version: '0.0.1',
         meson_version: '>=0.52.0',
         default_options: ['cpp_std=c++17', 'buildtype=release', 'layout=flat']
