Remove dependencies GitHub Actions steps on Linux
Enable compilers on CentOS Dockerfile
Source bash_profile in each step

--- a/scripts/ci/dockerhub/centos7-gcc8-clang5/Dockerfile
+++ b/scripts/ci/dockerhub/centos7-gcc8-clang5/Dockerfile
@@ -10,5 +10,7 @@ RUN yum update -y &&\
     yum install http://repo.okay.com.mx/centos/7/x86_64/release/okay-release-1-1.noarch.rpm -y &&\
     yum install git ninja-build python3-pip hdf5-devel which -y &&\   
     pip3 install meson &&\
-    scl enable devtoolset-8 -- bash &&\
-    scl enable llvm-toolset-7 bash
+# enable gcc and clang compilers
+    echo "source scl_source enable devtoolset-8" >> ~/.bash_profile &&\
+    echo "source scl_source enable llvm-toolset-7" >> ~/.bash_profile &&\
+    source ~/.bash_profile
