Added TransportNull and Put signatures
Make it default in Windows
Add HDF5 dependency on macOS CI
Add README information

--- a/source/ncio/meson.build
+++ b/source/ncio/meson.build
@@ -8,6 +8,7 @@ ncio_sources = ['core/NCIO.cpp',
                 
                 'transport/Transport.cpp',
                 'transport/TransportHDF5.cpp',
+                'transport/TransportNull.cpp',
                 
                 'schema/ncioNexus.cpp']
                 
