--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -182,7 +182,6 @@ jobs:
       run: scripts/ci/github-actions/bash/run_step.sh build
 
     - name: Test
-      if: contains(matrix.jobname, 'san')
       run: scripts/ci/github-actions/bash/run_step.sh test
     
     - name: Coverage
@@ -193,6 +192,7 @@ jobs:
       if: contains(matrix.jobname, 'coverage')
       uses: codecov/codecov-action@v1
       with:
+        file:  ../ncio-build/meson-logs/coverage.txt
         flags: alltests # optional
         name: codecov-ncio # optional
         fail_ci_if_error: true # optional (default = false)
