--- a/.github/workflows/ci-github-actions.yaml
+++ b/.github/workflows/ci-github-actions.yaml
@@ -190,10 +190,12 @@ jobs:
     
     - name: Upload Coverage
       if: contains(matrix.jobname, 'coverage')
-      run: |
-        curl -s https://codecov.io/bash > .codecov &&\
-        chmod +x .codecov &&\
-        ./.codecov -f ../ncio-build/meson-logs/coverage.txt -X fix
+      uses: codecov/codecov-action@v1
+      with:
+        file:  ../ncio-build/meson-logs/coverage.xml
+        flags: alltests # optional
+        name: codecov-ncio # optional
+        fail_ci_if_error: true # optional (default = false)
 
   static:
     runs-on: ubuntu-latest
