--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,4 +1,10 @@
-fixes:
+# Configuration file for codecov reporting code coverage
 
-# From CI for coverage
+# Disable codecov comments in every PR
+comment: off
+
+# Fixes report prefix paths from CI dynamic coverage action
+# from https://docs.codecov.io/docs/fixing-paths
+fixes:
   - "/__w/ncio/::"
+
