--- a/bindings/CXX17/meson.build
+++ b/bindings/CXX17/meson.build
@@ -8,14 +8,8 @@ ncio_cxx17_sources = ['ncio/cxx17/cxx17NCIO.cpp',
 
 ncio_cxx17_includes = ['ncio/cxx17']
 
-foreach ncio_schema : ncio_schemas
-  ncio_cxx17_schema_dir = 'ncio/cxx17/schema/'+ncio_schema.to_lower()
-  ncio_cxx17_sources += [ncio_cxx17_schema_dir+'/cxx17ncio'+ncio_schema+'.cpp']
-  ncio_cxx17_includes += [ncio_cxx17_schema_dir]
-endforeach
 
-
-# DEFINE LIBRARY
+# DEFINE CXX17 PUBLIC LIBRARY
 ncio_cxx17_lib = library('ncio-cxx17', 
                          sources: ncio_cxx17_sources,
                          include_directories: include_directories(ncio_cxx17_includes),
@@ -27,7 +21,9 @@ ncio_cxx17_lib = library('ncio-cxx17',
 ncio_cxx17_dep = declare_dependency(link_with: [ncio_cxx17_lib],
                                     include_directories: ['.','../../source'])
                                     
-# INSTALL PUBLIC HEADERS
+#################################
+## INSTALL PUBLIC CXX17 HEADERS #
+#################################
 
 # only public header that should be included in projects using ncio
 install_headers('ncio.h')
@@ -38,11 +34,3 @@ ncio_cxx17_headers = ['ncio/cxx17/cxx17NCIO.h',
 # ncio/cxx17 headers 
 # install in -> include/ncio/cxx17/cxx17.h
 install_headers(ncio_cxx17_headers, subdir:'ncio/cxx17')
-
-# ncio/cxx17/schema headers 
-# install in -> include/ncio/cxx17/schema/schema_name
-foreach ncio_schema : ncio_schemas
-  ncio_cxx17_schema_dir = 'ncio/cxx17/schema/'+ncio_schema.to_lower()
-  ncio_cxx17_schema_header = ncio_cxx17_schema_dir+'/cxx17ncio'+ncio_schema+'.h'
-  install_headers(ncio_cxx17_schema_header, subdir: ncio_cxx17_schema_dir)
-endforeach
