Ignore testing directory in codecov

--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,10 +1,14 @@
 # Configuration file for codecov reporting code coverage
+# at https://codecov.io/gh/ORNL/ncio
 
 # Disable codecov comments in every PR
 comment: off
+
+# Ignore testing directory itself
+ignore:
+  - "testing"
 
 # Fixes report prefix paths from CI dynamic coverage action
 # from https://docs.codecov.io/docs/fixing-paths
 fixes:
   - "/__w/ncio/::"
-
