Setting hooks to HDF5 transport
Simple test creates an empty hdf5 file for reading

--- a/source/ncio/meson.build
+++ b/source/ncio/meson.build
@@ -45,6 +45,8 @@ ncio_config_header = configure_file(input:  'ncioConfig.h.in',
 ncio_sources = ['core/NCIO.cpp',
                 'core/DataDescriptor.cpp',
                 
+                'helper/ncioHelperString.cpp',
+                
                 'transport/Transport.cpp',
                 'transport/TransportNull.cpp']
 
