--- a/testing/functional/bindings/CXX17/meson.build
+++ b/testing/functional/bindings/CXX17/meson.build
@@ -2,8 +2,7 @@
 #  Created on: May 19, 2020
 #      Author: William F Godoy godoywf@ornl.gov
 
-functional_tests = ['cxx17Common.cpp',
-                    'cxx17NCIO.cpp']
+functional_tests = ['cxx17NCIO.cpp']
 
 foreach functional_test : functional_tests
   exe = executable('functionaltest-ncio-'+functional_test, 
@@ -11,4 +10,15 @@ foreach functional_test : functional_tests
                    include_directories:  ncio_doctest_inc, 
                    dependencies: [ncio_cxx17_dep, doctest_dep])
   test(functional_test, exe, timeout: 10)
+endforeach
+
+
+foreach ncio_schema : ncio_schemas 
+  exe = executable('functionaltest-ncio-schema-' + ncio_schema.to_lower(), 
+                   'schema/' + 
+                   ncio_schema.to_lower() + 
+                   '/functionalTest_cxx17DataDescriptor' + ncio_schema + '.cpp',
+                   include_directories:  ncio_doctest_inc, 
+                   dependencies: [ncio_cxx17_dep, doctest_dep])
+  test(ncio_schema, exe, timeout: 10)
 endforeach
