Adding datatype enum
Modified placeholder m_Entries for Put and Get in DataDescriptor

--- a/source/ncio/meson.build
+++ b/source/ncio/meson.build
@@ -46,6 +46,7 @@ ncio_sources = ['core/NCIO.cpp',
                 'core/DataDescriptor.cpp',
                 
                 'helper/ncioHelperString.cpp',
+                'helper/ncioHelperTypes.cpp',
                 
                 'transport/Transport.cpp',
                 'transport/TransportNull.cpp']
